--- a/sass/master.scss
+++ b/sass/master.scss
@@ -453,6 +453,7 @@ a {
 .modal {
     border-radius: 0 !important;
     background-size: 100% auto;
+    background-repeat: no-repeat;
     min-height: 62%;
     width: 65% !important;
     overflow: hidden !important;
@@ -484,6 +485,14 @@ a {
 
     &.mdl-2-1-1 {
         background-image: url("../img/bck-modal2-1-1.jpg");
+    }
+
+    &.mdl-2-1-1-1 {
+        background-image: url("../img/bck-modal2-1-1-1.jpg");
+    }
+
+    &.mdl-2-1-1-2 {
+        background-image: url("../img/bck-modal2-1-1-2.jpg");
     }
 
     &.mdl-3 {
@@ -929,6 +938,155 @@ a {
             }
 
         }
+    }
+}
+
+.modal2-1-1-menu {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 888px;
+    height: 447px;
+    font-size: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: stretch;
+    z-index: -1;
+    div {
+        
+        &:nth-child(1) {
+            .item {
+                background-color: $colorBtnModal1;
+                color: $textColor1;
+                position: absolute;
+                left: 138px;
+                top: 85px;
+            }
+        }
+
+        &:nth-child(2) {
+            .item {
+                background-color: $colorBtnModal2;
+                color: $textColor1;
+                position: absolute;
+                left: 217px;
+                bottom: 155px;
+            }
+        }
+
+        &:nth-child(3) {
+            .item {
+                background-color: $colorBtnModal3;
+            }
+        }
+
+        .item {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: center;
+            color: $mainHr;
+            text-align: center;
+            font-weight: 400;
+            img {
+                width: 110px;
+                height: auto;
+                display: block;
+                margin: 15px auto;
+                position: absolute;
+            }
+            span {
+                position: absolute;
+                top: 58px;
+                font-size: $fontSize + 1;
+            }
+            &:hover {
+                color: $textColor1 !important;
+                background-color: rgba(10, 116, 255, 0.548);
+                border: 1px solid rgba(0, 0, 0, 0.301);
+                outline-color: rgba(255, 255, 255, 0);
+                outline-offset: 15px;
+            }
+
+        }
+    }
+}
+
+.modal2-1-1-1_P0 {
+    position: absolute;
+    margin: 25px 10px;
+    width: 460px;
+    height: 220px;
+    top: 45px;
+    left: 298px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+    color: $textColor1;
+    line-height: 1.1;
+    & strong {
+        font-weight: 800;
+    }
+}
+
+.modal2-1-1-1_P1 {
+    position: absolute;
+    margin: 10px 10px;
+    width: 460px;
+    height: 100px;
+    bottom: 34px;
+    left: 298px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+    color: $textColor1;
+    line-height: 1.3;
+    & strong {
+        font-weight: 800;
+    }
+}
+
+.modal2-1-1-2_P0 {
+    position: absolute;
+    margin: 10px;
+    width: 253px;
+    height: auto;
+    bottom: 34px;
+    left: 39px;
+    display: block;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+    color: $textColor4;
+    line-height: 1.4;
+    & span {
+        font-size: $fontSize + 2;
+        font-weight: 800;
+        margin-bottom: 20px;
+        display: inline-block;
+    }
+}
+
+.modal2-1-1-2_P1 {
+    position: absolute;
+    margin: 10px;
+    width: 258px;
+    height: auto;
+    bottom: 15px;
+    left: 357px;
+    display: block;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+    color: $textColor4;
+    line-height: 1.1;
+    & span {
+        font-size: $fontSize + 2;
+        font-weight: 800;
+        margin-bottom: 20px;
+        display: inline-block;
     }
 }
 
