--- a/sass/master.scss
+++ b/sass/master.scss
@@ -499,6 +499,10 @@ a {
         background-image: url("../img/bck-modal3.jpg");
     }
 
+    &.mdl-3-1 {
+        background-image: url("../img/bck-modal3-1.jpg");
+    }
+
     .centered {
         display: block;
         margin: 0 auto;
@@ -1108,7 +1112,7 @@ a {
                 background-image: url("../img/btn1-modal3.png");
             }
 
-            &:hover{
+            &:hover {
 
                 &:before {
                     content: '';
@@ -1151,12 +1155,12 @@ a {
             }
 
             &:hover {
-               
+
                 &:before {
                     content: '';
                     position: absolute;
                     top: -3px;
-                    left: 250px;
+                    left: 248px;
                     right: -25px;
                     bottom: -4px;
                     background: #fff;
@@ -1169,7 +1173,7 @@ a {
                     content: '';
                     position: absolute;
                     top: -3px;
-                    left: 250px;
+                    left: 248px;
                     right: -25px;
                     bottom: -4px;
                     background: #fff;
@@ -1183,8 +1187,8 @@ a {
                 &:before {
                     background: linear-gradient(235deg, rgb(0, 81, 255), rgba(255, 255, 255, 0.644), rgb(0, 195, 255));
                 }
-                
-        }
+
+            }
         }
 
         .item {
@@ -1285,4 +1289,80 @@ a {
             }
         }
     }
+}
+
+#slides-modal3-1 {
+    width: 70%;
+    float: right;
+    right: 2rem;
+    margin-top: 80px;
+
+    .slides {
+
+        li {
+            display: flex;
+            justify-content: space-around;
+
+            div {
+                background-image: url("../img/slider1-modal3.png");
+                background-size: contain;
+                background-repeat: no-repeat;
+                background-position: center;
+                padding: 15px 35px 0 30px;
+                max-width: 275px;
+                min-width: 275px;
+
+                img {
+                    width: 55px !important;
+                    height: auto;
+                    margin: 10px auto;
+                    background-size: contain;
+                    background-repeat: no-repeat;
+                    background-position: center;
+                }
+
+                p {
+                    font-size: 80%;
+                }
+
+            }
+
+            .slide3-1-3 {
+                p {
+                    background-color: #fff;
+                    border-radius: 15px;
+                }
+            }
+
+            .slide3-1-9 {
+                background-image: url("../img/slider1-2-modal3.png");
+                background-size: 100% 100%;
+                max-width: 350px;
+                min-width: 350px;
+            }
+
+        }
+    }
+
+    .indicators {
+        bottom: 10px !important;
+    }
+}
+
+.modal3-1-next {
+    position: absolute;
+    right: -40px;
+    height: 50px;
+    top: calc(50% - 50px);
+    cursor: pointer;
+    z-index: 2;
+}
+
+.modal3-1-prev {
+    position: absolute;
+    left: -40px;
+    height: 50px;
+    top: calc(50% - 50px);
+    cursor: pointer;
+    z-index: 3;
 }
