--- a/sass/master.scss
+++ b/sass/master.scss
@@ -172,7 +172,6 @@ a {
     }
 }
 
-
 // Estilo de contenidos
 //*********************************************************
 
@@ -456,7 +455,8 @@ a {
     border-radius: 0 !important;
     background-size: 100% auto;
     background-repeat: no-repeat;
-    min-height: 62%;
+    min-height: 62% !important;
+    max-height: 62% !important;
     width: 65% !important;
     overflow: hidden !important;
     margin-top: 5% !important;
@@ -511,13 +511,14 @@ a {
 
     &.mdl-3-1 {
         background-image: url("../img/bck-modal3-1.jpg");
+        background-size: cover;
     }
 
     .centered {
         display: block;
         margin: 0 auto;
         text-align: center;
-        font-size: 95%;
+        font-size: 105%;
     }
 
     .etiqueta {
@@ -573,7 +574,7 @@ a {
             }
 
             .ico-funcion {
-                width: 115px;
+                width: 85px;
                 height: auto;
                 display: block;
                 margin: 8px auto;
@@ -591,7 +592,7 @@ a {
 
         .menu {
             margin: 35px 0px 0px !important;
-            height: 110px;
+            height: 95px;
             border: 1px dotted $btnBckcolor;
             border-radius: 15px;
             display: flex;
@@ -600,16 +601,19 @@ a {
 
 
             .tabs {
-                height: 100%;
+                height: 85%;
                 background: transparent;
                 display: flex;
                 border-radius: 14px;
                 overflow: hidden;
+                margin-top: 2%;
+                justify-content: space-around;
 
                 .tab {
                     height: 100%;
                     flex: 1 0 auto;
                     background-size: 100% 100%;
+                    max-width: 100px !important;
 
                     &:nth-child(1) {
                         background-image: url("../img/bck-btn1-modal1.png");
@@ -640,25 +644,26 @@ a {
                 margin: 0 auto;
                 display: block;
                 font-size: $fontSize - 1;
-                font-weight: 400;
+                font-weight: 800;
                 color: $textColor2;
                 line-height: 1;
                 z-index: 1;
-                margin-top: -15px;
+                margin-top: -13px;
 
                 &:nth-child(1) {
-                    left: 120px;
+                    left: 117px;
                 }
 
                 &:nth-child(2) {
-                    left: 320px;
+                    left: 313px;
                 }
             }
 
 
             .img-btn {
-                height: 75px;
-                margin-top: 15px;
+                height: 60px;
+                margin-top: 9px;
+                margin-left: -4px;
                 border-radius: 50%;
                 box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
                 outline-color: rgba(15, 58, 250, 0.5);
@@ -1496,7 +1501,7 @@ a {
     width: 70%;
     float: right;
     right: 2rem;
-    margin-top: 80px;
+    margin-top: 50px;
 
     .slides {
 
@@ -1506,7 +1511,7 @@ a {
 
             div {
                 background-image: url("../img/slider1-modal3.png");
-                background-size: contain;
+                background-size: 100% 100%;
                 background-repeat: no-repeat;
                 background-position: center;
                 padding: 15px 35px 0 30px;
@@ -1523,11 +1528,12 @@ a {
                 }
 
                 p {
-                    font-size: 80%;
+                    font-size: 88%;
+                    font-weight: 600;
                 }
 
             }
-
+        
             .slide3-1-3 {
                 p {
                     background-color: #fff;
@@ -1537,7 +1543,6 @@ a {
 
             .slide3-1-9 {
                 background-image: url("../img/slider1-2-modal3.png");
-                background-size: 100% 100%;
                 max-width: 350px;
                 min-width: 350px;
             }
@@ -1554,7 +1559,7 @@ a {
     position: absolute;
     right: -40px;
     height: 50px;
-    top: calc(50% - 50px);
+    top: calc(50% - 25px);
     cursor: pointer;
     z-index: 2;
 }
@@ -1563,7 +1568,7 @@ a {
     position: absolute;
     left: -40px;
     height: 50px;
-    top: calc(50% - 50px);
+    top: calc(50% - 25px);
     cursor: pointer;
     z-index: 3;
 }
