--- a/sass/master.scss
+++ b/sass/master.scss
@@ -30,6 +30,8 @@ $mainHr: rgb(0, 27, 72);
 $colorBtnModal1: rgb(93, 129, 191);
 $colorBtnModal2: rgb(0, 182, 249);
 $colorBtnModal3: rgb(126, 188, 188);
+$colorHoverText: rgb(229, 145, 47);
+$colorBgBtn: rgb(215, 236, 241);
 
 $headerHr: rgba(255, 255, 255, 0.39);
 
@@ -503,6 +505,14 @@ a {
 
     &.mdl-2-1-1-4 {
         background-image: url("../img/bck-modal2-1-1-4.jpg");
+    }
+
+    &.mdl-2-1-1-5 {
+        background-image: url("../img/bck-modal2-1-1-5.jpg");
+    }
+
+    &.mdl-2-1-1-6 {
+        background-image: url("../img/bck-modal2-1-1-6.jpg");
     }
 
     &.mdl-3 {
@@ -1025,6 +1035,38 @@ a {
             }
         }
 
+        &:nth-child(5) {
+            .item {
+                background-color: $colorBtnModal3;
+                color: $textColor1;
+                position: absolute;
+                left: 617px;
+                bottom: 155px;
+                span {
+                    top: 51px;
+                    width: 82px;
+                    font-size: $fontSize - 1;
+                    color: $textColor1;
+                }
+            }
+        }
+
+        &:nth-child(6) {
+            .item {
+                background-color: $colorBtnModal3;
+                color: $textColor1;
+                position: absolute;
+                left: 684px;
+                top: 85px;
+                span {
+                    top: 58px;
+                    width: 82px;
+                    font-size: $fontSize - 1;
+                    color: $textColor1;
+                }
+            }
+        }
+
         .item {
             display: flex;
             flex-direction: column;
@@ -1260,33 +1302,351 @@ a {
 
 .modal2-1-1-4_P0 {
     top: 131px;
-    left: 47px;
+    left: 48px;
     position: absolute;
     font-size: $fontSize - 3;
-    background: yellow;
+    background: $colorBtnModal3;
     height: 25px;
-    width: 173px;
+    width: 177px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &:hover{
+        background: $colorHoverText;
+    }
+}
+
+.modal2-1-1-4_P1 {
+    top: 171px;
+    left: 48px;
+    position: absolute;
+    font-size: 13px;
+    background: $colorBtnModal3;
+    height: 25px;
+    width: 89px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &:hover {
+        background: $colorHoverText;
+        & ~ .textos_mdl2-1-1-4 #modal2-1-1-4_P0 {
+            display: none;
+        }
+        & ~ .textos_mdl2-1-1-4 #modal2-1-1-4_P1 {
+            display: table;
+        }
+    }
+}
+
+.modal2-1-1-4_P2 {
+    top: 171px;
+    left: 136px;
+    position: absolute;
+    font-size: 13px;
+    background: $colorBtnModal3;
+    height: 25px;
+    width: 89px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &:hover {
+        background: $colorHoverText;
+        & ~ .textos_mdl2-1-1-4 #modal2-1-1-4_P0 {
+            display: none;
+        }
+        & ~ .textos_mdl2-1-1-4 #modal2-1-1-4_P2 {
+            display: table;
+        }
+    }
+}
+
+.modal2-1-1-4_P3 {
+    top: 211px;
+    left: 138px;
+    position: absolute;
+    font-size: 13px;
+    background: $colorBtnModal3;
+    height: 25px;
+    width: 177px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &:hover {
+        background: $colorHoverText;
+        & ~ .textos_mdl2-1-1-4 #modal2-1-1-4_P0 {
+            display: none;
+        }
+        & ~ .textos_mdl2-1-1-4 #modal2-1-1-4_P3 {
+            display: table;
+        }
+    }
+}
+
+.modal2-1-1-4_P4 {
+    top: 251px;
+    left: 228px;
+    position: absolute;
+    font-size: 13px;
+    background: $colorBtnModal3;
+    height: 25px;
+    width: 177px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &:hover {
+        background: $colorHoverText;
+        & ~ .textos_mdl2-1-1-4 #modal2-1-1-4_P0 {
+            display: none;
+        }
+        & ~ .textos_mdl2-1-1-4 #modal2-1-1-4_P4 {
+            display: table;
+        }
+    }
+}
+
+.modal2-1-1-4_P5 {
+    top: 281px;
+    left: 228px;
+    position: absolute;
+    font-size: 12px;
+    background: $colorBtnModal3;
+    height: 25px;
+    width: 89px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &:hover {
+        background: $colorHoverText;
+        & ~ .textos_mdl2-1-1-4 #modal2-1-1-4_P0 {
+            display: none;
+        }
+        & ~ .textos_mdl2-1-1-4 #modal2-1-1-4_P5 {
+            display: table;
+        }
+    }
+}
+
+.modal2-1-1-4_P6 {
+    top: 291px;
+    left: 316px;
+    position: absolute;
+    font-size: 12px;
+    background: $colorBtnModal3;
+    height: 25px;
+    width: 89px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &:hover {
+        background: $colorHoverText;
+        & ~ .textos_mdl2-1-1-4 #modal2-1-1-4_P0 {
+            display: none;
+        }
+        & ~ .textos_mdl2-1-1-4 #modal2-1-1-4_P6 {
+            display: table;
+        }
+    }
+}
+
+.modal2-1-1-4_P7 {
+    top: 321px;
+    left: 228px;
+    position: absolute;
+    font-size: 12px;
+    background: $colorBgBtn;
+    height: 25px;
+    width: 267px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &:hover {
+        background: $colorHoverText;
+        & ~ .textos_mdl2-1-1-4 #modal2-1-1-4_P0 {
+            display: none;
+        }
+        & ~ .textos_mdl2-1-1-4 #modal2-1-1-4_P7 {
+            display: table;
+        }
+    }
+}
+
+.textos_mdl2-1-1-4 {
+    display: flex;
+    width: 292px;
+    position: absolute;
+    top: 99px;
+    right: 39px;
+    height: 303px;
+    align-items: center;
+    padding: 30px;
     text-align: center;
-    & p:not(#text_01) {
-        top: 3px;
-        position: relative;
+    & strong {
         font-weight: 700;
     }
-    & #text_01 {
-        color: $textColor7;
-        position: absolute;
-        left: 508px;
-        width: 297px;
-        padding: 20px;
-        top: 38px;
-        font-size: $fontSize - 2;
+    & #modal2-1-1-4_P1, #modal2-1-1-4_P2, #modal2-1-1-4_P3, #modal2-1-1-4_P4, #modal2-1-1-4_P5, #modal2-1-1-4_P5, #modal2-1-1-4_P6, #modal2-1-1-4_P7 {
         display: none;
     }
-    &:hover{
-        background: red;
-        & #text_01 {
-            display: block;
+}
+
+.modal2-1-1-5_P0 {
+    position: absolute;
+    color: $textColor6;
+    top: 145px;
+    background: $colorBtnModal3;
+    left: 122px;
+    height: 30px;
+    width: 232px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 700;
+    font-size: 13px;
+    &:hover {
+        color: $textColor1;
+        background: $colorHoverText;
+    }
+}
+
+.modal2-1-1-5_P1 {
+    position: absolute;
+    color: $textColor6;
+    top: 145px;
+    background: $colorBtnModal3;
+    left: 355px;
+    height: 30px;
+    width: 210px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 700;
+    font-size: 13px;
+    &:hover {
+        color: $textColor1;
+        background: $colorHoverText;
+        & ~ .textos_mdl2-1-1-5 #modal2-1-1-5_P0 {
+            display: none;
         }
+        & ~ .textos_mdl2-1-1-5 #modal2-1-1-5_P1 {
+            display: table;
+        }
+    }
+}
+
+.modal2-1-1-5_P2 {
+    position: absolute;
+    color: $textColor6;
+    top: 145px;
+    background: $colorBtnModal3;
+    left: 567px;
+    height: 30px;
+    width: 235px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 700;
+    font-size: 13px;
+    &:hover {
+        color: $textColor1;
+        background: $colorHoverText;
+        & ~ .textos_mdl2-1-1-5 #modal2-1-1-5_P0 {
+            display: none;
+        }
+        & ~ .textos_mdl2-1-1-5 #modal2-1-1-5_P2 {
+            display: table;
+        }
+    }
+}
+
+.textos_mdl2-1-1-5 {
+    display: flex;
+    width: 515px;
+    position: absolute;
+    bottom: 11px;
+    left: 288px;
+    height: 132px;
+    align-items: center;
+    padding: 30px;
+    text-align: center;
+    font-size: 13px;
+    & #modal2-1-1-5_P1, #modal2-1-1-5_P2 {
+        display: none;
+    }
+    & strong {
+        font-weight: 700;
+    }
+}
+
+.modal2-1-1-6_P0 {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    top: 132px;
+    left: 223px;
+    & img {
+        max-width: 80px;
+    }
+    & p {
+        margin-left: 13px;
+        width: 10px;
+        font-weight: 700;
+        font-size: 17px;
+        line-height: 1.2;
+    }
+}
+
+.modal2-1-1-6_P1 {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    top: 212px;
+    left: 223px;
+    & img {
+        max-width: 80px;
+    }
+    & p {
+        margin-left: 13px;
+        width: 100px;
+        font-weight: 700;
+        font-size: 17px;
+        line-height: 1.2;
+    }
+}
+
+.modal2-1-1-6_P2 {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    top: 290px;
+    left: 223px;
+    & img {
+        max-width: 80px;
+    }
+    & p {
+        margin-left: 13px;
+        width: 10px;
+        font-weight: 700;
+        font-size: 17px;
+        line-height: 1.2;
+    }
+}
+
+.textos_mdl2-1-1-6 {
+    display: flex;
+    width: 397px;
+    position: absolute;
+    top: 99px;
+    right: 38px;
+    height: 303px;
+    align-items: center;
+    padding: 30px;
+    text-align: center;
+    font-size: $fontSize + 2;
+
+    & #modal2-1-1-6_P1, #modal2-1-1-6_P2 {
+        display: none;
+    }
+    & strong {
+        font-weight: 700;
     }
 }
 
