--- a/sass/master.scss
+++ b/sass/master.scss
@@ -141,6 +141,13 @@ main {
     background-image: url(../img/fondo.jpg);
     background-size: 100% 100%;
 
+    &#contents-2-1-1 {
+    background-image: url("../img/bck-modal2-1-1.jpg");
+    background-size: cover;
+    z-index: 1;
+    position: relative;
+}
+
     >hr {
         margin: 5px 0px;
         width: 100%;
@@ -457,6 +464,133 @@ img {
     }
 }
 
+.mdl-2-1-1 {
+    background-image: url("../img/Recurso\ 2.png");
+    background-repeat: no-repeat;
+    background-position-x: 50%;
+    background-position-y: 120%;
+    position: relative;
+    background-size: 50%;
+    height: 555px;
+    width: 100%;
+
+    & .bgTitle {
+        width: 750px;
+    }
+
+    & .etiquetaLarga {
+        position: absolute;
+        color: $textColor1;
+        top: 0;
+        left: 150px;
+        font-size: 160%;
+    }
+
+    & .modal2-1-1-menu {
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 555px;
+        font-size: 100%;
+        display: flex;
+        justify-content: space-around;
+        align-items: stretch;
+        z-index: 1;
+        position: absolute;
+    
+        div {
+    
+            &:nth-child(1) {
+                .item {
+                    background-color: $colorBtnModal1;
+                    color: $textColor1;
+                    position: absolute;
+                    left: 299px;
+                    top: 120px;
+                }
+            }
+    
+            &:nth-child(2) {
+                .item {
+                    background-color: $colorBtnModal2;
+                    color: $textColor1;
+                    position: absolute;
+                    left: 397px;
+                    bottom: 70px;
+                }
+            }
+    
+            &:nth-child(3) {
+                .item {
+                    background-color: $colorBtnModal3;
+                    color: $textColor1;
+                    position: absolute;
+                    left: 456px;
+                    top: 160px;
+                }
+            }
+    
+            &:nth-child(4) {
+                .item {
+                    background-color: $colorBtnModal3;
+                    color: $textColor1;
+                    position: absolute;
+                    right: 444px;
+                    top: 160px;
+                }
+            }
+    
+            &:nth-child(5) {
+                .item {
+                    background-color: $colorBtnModal3;
+                    color: $textColor1;
+                    position: absolute;
+                    right: 382px;
+                    bottom: 70px;
+                }
+            }
+    
+            &:nth-child(6) {
+                .item {
+                    background-color: $colorBtnModal3;
+                    color: $textColor1;
+                    position: absolute;
+                    right: 299px;
+                    top: 120px;
+                }
+            }
+    
+            .item {
+                color: $mainHr;
+                font-weight: 400;
+                width: 90px;
+                height: 90px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border: 2px solid green;
+                img {
+                    width: 135px;
+                    height: auto;
+                    display: block;
+                    position: absolute;
+                }
+                span {
+                    position: absolute;
+                    font-size: $fontSize;
+                    line-height: 1.4;
+                }
+    
+               
+    
+            }
+        }
+    }
+
+}
+
+
+
 .modal {
     border-radius: 0 !important;
     background-size: 100% auto;
@@ -744,7 +878,7 @@ img {
     cursor: pointer;
     top: 15px;
     right: 15px;
-
+    z-index: 1000;
     img {
         width: 100%;
         height: 100%;
@@ -979,138 +1113,7 @@ img {
     }
 }
 
-.modal2-1-1-menu {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 888px;
-    height: 447px;
-    font-size: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: stretch;
-    z-index: -1;
 
-    div {
-
-        &:nth-child(1) {
-            .item {
-                background-color: $colorBtnModal1;
-                color: $textColor1;
-                position: absolute;
-                left: 138px;
-                top: 85px;
-            }
-        }
-
-        &:nth-child(2) {
-            .item {
-                background-color: $colorBtnModal2;
-                color: $textColor1;
-                position: absolute;
-                left: 217px;
-                bottom: 155px;
-            }
-        }
-
-        &:nth-child(3) {
-            .item {
-                background-color: $colorBtnModal3;
-                color: $textColor1;
-                position: absolute;
-                left: 266px;
-                top: 119px;
-
-                span {
-                    top: 50px;
-                    width: 100px;
-                }
-            }
-        }
-
-        &:nth-child(4) {
-            .item {
-                background-color: $colorBtnModal3;
-                color: $textColor1;
-                position: absolute;
-                left: 567px;
-                top: 119px;
-
-                span {
-                    top: 42px;
-                    width: 82px;
-                    font-size: $fontSize - 1;
-                    color: $textColor6;
-                }
-            }
-        }
-
-        &:nth-child(5) {
-            .item {
-                background-color: $colorBtnModal3;
-                color: $textColor1;
-                position: absolute;
-                left: 617px;
-                bottom: 155px;
-                span {
-                    top: 51px;
-                    width: 82px;
-                    font-size: $fontSize - 1;
-                    color: $textColor1;
-                }
-            }
-        }
-
-        &:nth-child(6) {
-            .item {
-                background-color: $colorBtnModal3;
-                color: $textColor1;
-                position: absolute;
-                left: 684px;
-                top: 85px;
-                span {
-                    top: 58px;
-                    width: 82px;
-                    font-size: $fontSize - 1;
-                    color: $textColor1;
-                }
-            }
-        }
-
-        .item {
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-            align-items: center;
-            color: $mainHr;
-            text-align: center;
-            font-weight: 400;
-
-            img {
-                width: 110px;
-                height: auto;
-                display: block;
-                margin: 15px auto;
-                position: absolute;
-            }
-
-            span {
-                position: absolute;
-                top: 58px;
-                font-size: $fontSize;
-            }
-
-            &:hover {
-                color: $textColor1 !important;
-                background-color: rgba(10, 116, 255, 0.548);
-                border: 1px solid rgba(0, 0, 0, 0.301);
-                outline-color: rgba(255, 255, 255, 0);
-                outline-offset: 15px;
-            }
-
-        }
-    }
-}
 
 .modal2-1-1-1_P0 {
     position: absolute;
