--- a/sass/master.scss
+++ b/sass/master.scss
@@ -2279,6 +2279,7 @@ img, .txtModal-2-2-2 p {
             width: 80% !important;
             height: 205px !important;
             padding: 10px;
+            color: $textColor2;
         }
     }
 }
