--- a/sass/master.scss
+++ b/sass/master.scss
@@ -187,6 +187,10 @@ img,
     }
 }
 
+.modal3-1-next, .modal3-1-prev {
+    animation-iteration-count: inherit !important;
+}
+
 // Estilo de contenidos
 //*********************************************************
 
@@ -196,6 +200,13 @@ img,
     width: 79vw;
     margin: 0 auto;
     display: block;
+}
+
+.img-central{
+    position: absolute;
+    top: 33vh;
+    left: 38vw;
+    width: 340px;
 }
 
 .nube {
@@ -252,7 +263,7 @@ img,
     top: 30vh;
     left: 35vw;
     z-index: 2;
-    max-height: 40vh;
+    max-height: 45vh;
     width: 32vw!important;
     overflow: auto;
 
@@ -282,6 +293,7 @@ img,
         color: $textColor2;
         font-family: $font2;
         text-align: center;
+        font-size: 92%;
     }
 }
 
@@ -367,10 +379,10 @@ img,
     position: absolute !important;
     top: 16vh;
     left: 44vw;
-    width: 15vw;
-    max-width: 15vw;
-    height: 30vh;
-    max-height: 30vh;
+    width: 180px;
+    max-width: 180px;
+    height: 180px;
+    max-height: 180px;
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -413,10 +425,10 @@ img,
     position: absolute !important;
     top: 59vh;
     left: 33vw;
-    width: 15vw;
-    max-width: 15vw;
-    height: 30vh;
-    max-height: 30vh;
+    width: 180px;
+    max-width: 180px;
+    height: 180px;
+    max-height: 180px;
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -460,10 +472,10 @@ img,
     position: absolute !important;
     top: 59vh;
     left: 56vw;
-    width: 15vw;
-    max-width: 15vw;
-    height: 30vh;
-    max-height: 30vh;
+    width: 180px;
+    max-width: 180px;
+    height: 180px;
+    max-height: 180px;
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -815,22 +827,28 @@ img,
                     height: 100%;
                     flex: 1 0 auto;
                     background-size: 100% 100%;
-                    max-width: 10vw !important;
-                    width: 10vw;
+                    max-width: 7vw !important;
+                    width: 7vw;
 
                     &:nth-child(1) {
-                        background-image: url("../img/bck-btn1-modal1.png");
-                    }
-
-                    &:nth-child(2) {
                         background-image: url("../img/bck-btn2-modal1.png");
                     }
 
-                    &:nth-child(3) {
+                    &:nth-child(2) {
                         background-image: url("../img/bck-btn3-modal1.png");
                     }
 
+                    &:nth-child(3) {
+                        background-image: url("../img/bck-btn4-modal1.png");
+                    }
+
+                    &:nth-child(4) {
+                        background-image: url("../img/bck-btn1-modal1.png");
+                    }
+
                     a {
+                        padding: 0px 20px !important;
+
                         &.active {
                             background: transparent !important;
                         }
@@ -852,14 +870,15 @@ img,
                 line-height: 1;
                 z-index: 1;
                 margin-top: -3vh;
-
-                &:nth-child(1) {
-                    left: 8vw;
-                }
-
+                
                 &:nth-child(2) {
-                    left: 22.5vw;
+                    left: 13.5vw;
                 }
+
+                &:nth-child(3) {
+                    left: 24.4vw;
+                }
+                
             }
 
 
@@ -986,6 +1005,7 @@ img,
     left: 24vw;
     float: left;
     padding: 1vh 4vw!important;
+    animation-iteration-count: inherit !important;
 }
 
 .modal1-1_P0 {
@@ -1159,11 +1179,11 @@ img,
 .modal2-1_P0 {
     position: absolute;
     width: 25vw;
-    top: 19vh;
+    top: 22vh;
     left: 7vw;
     font-family: $font2;
     font-weight: 500;
-    font-size: 100%;
+    font-size: 125%;
 }
 
 .modal2-1-1-menu {
@@ -1347,7 +1367,7 @@ img,
     & span {
         font-size: 1.5vw;
         font-weight: 800;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
         display: inline-block;
     }
 }
@@ -1886,6 +1906,12 @@ img,
     padding: 2vw;
     font-size: 1.2vw;
 
+    img{
+        display: block;
+        margin: 0 auto;
+        width: 65px;
+    }
+
     & #modal2-1-1-6_P1,
     #modal2-1-1-6_P2 {
         display: none;
@@ -2205,7 +2231,7 @@ img,
                 width: 3vw;
                 height: auto;
                 display: block;
-                margin: 2vh auto;
+                margin: 1vh auto;
             }
 
             span {
@@ -2321,7 +2347,7 @@ img,
                 }
 
                 p {
-                    font-size: 88%;
+                    font-size: 87%;
                     font-weight: 600;
                     background-color: #fff;
                 }
@@ -2335,10 +2361,11 @@ img,
                 }
             }
 
-            .slide3-1-9 {
-                background-image: url("../img/slider1-2-modal3.png");
+            .slide3-1-8{
+                p{
+                    font-size: 90%;
+                }
             }
-
         }
     }
 
@@ -2467,6 +2494,7 @@ img,
     top: calc(50% - 50px);
     cursor: pointer;
     z-index: 2;
+    animation-iteration-count: inherit !important;
 }
 
 .modal3-2-prev {
@@ -2476,4 +2504,5 @@ img,
     top: calc(50% - 50px);
     cursor: pointer;
     z-index: 3;
+    animation-iteration-count: inherit !important;
 }
