--- a/sass/master.scss
+++ b/sass/master.scss
@@ -1840,6 +1840,7 @@ img,
     top: 18.5vh;
     left: 17vw;
     width: 14.5vw;
+    cursor: pointer;
 
     & img {
         max-width: 5.2vw;
@@ -1861,6 +1862,7 @@ img,
     top: 29.5vh;
     left: 17vw;
     width: 14.5vw;
+    cursor: pointer;
 
     & img {
         max-width: 5.2vw;
@@ -1882,6 +1884,7 @@ img,
     top: 40.1vh;
     left: 17vw;
     width: 14.5vw;
+    cursor: pointer;
 
     & img {
         max-width: 5.2vw;
@@ -1931,7 +1934,7 @@ img,
     height: 33vh;
 
     img {
-        width: auto;
+        width: 100%;
         height: 100%;
         display: block;
         margin: 0 auto;
@@ -2005,6 +2008,10 @@ img,
         cursor: pointer;
         background-size: 100% 100%;
         background-repeat: no-repeat;
+
+        i{
+            display: contents;
+        }
 
         &:nth-child(1) {
             background-image: url('../img/bck-modal2-2-2_P1.png');
